fix: image width overflow

--- a/static/css/content.css
+++ b/static/css/content.css
@@ -86,6 +86,10 @@ video {
     display: block;
 }
 
+.content img {
+    max-width: 100%;
+}
+
 table {
     border-collapse: collapse;
     width: 80%;
